# umbra

./: Cargo.toml
.devcontainer/: devcontainer.json
umbra-content-types/: Cargo.toml  build.rs
umbra-content-types/protos/: content.proto
umbra-content-types/src/: content_types.rs  lib.rs
umbra-poc/: Cargo.toml
umbra-poc/src/: crypto.rs  main.rs  sdk.rs  utils.rs
umbra-sdk/: Cargo.toml
umbra-sdk/src/: client.rs  crypto.rs  error.rs  lib.rs  utils.rs
umbra-sdk/src/convos/: private.rs
umbra-types/: build.rs
umbra-types/protos/: payload.proto  umbra.proto
umbra-types/src/: lib.rs  payload.rs
